actulizacion de modificaciones

--- a/index.html
+++ b/index.html
@@ -9,22 +9,28 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./src/css/index.css">
-    <title>Piedra Luna Resort</title>
-    <link rel="icon" href="./src/img/icons/favicon.ico" type="image/x-icon">
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
 
-    
+    <link rel="stylesheet" href="./src/css/index.css" />
+    <title>Piedra Luna Resort</title>
+    <link rel="icon" href="/src/img/icons/favicon.ico" type="image/x-icon" />
   </head>
+
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light">
+    <nav
+      class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light"
+    >
       <div class="container-fluid">
         <a class="navbar-brand order-2 order-md-1" href="./index.html">
           <img
-            src="./src/img/webp/Home/LOGO.jpg"
+            src="/src/img/webp/Home/LOGO.jpg"
             alt="Logo"
-            width="100"
-            height="50"
+            width="120"
+            height="auto"
           />
         </a>
         <button
@@ -40,17 +46,29 @@
           class="collapse navbar-collapse order-md-2 justify-content-end ms-3"
         >
           <ul class="navbar-nav mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="./src/pages/hotel.html">Hotel</a></li>
             <li class="nav-item">
-              <a class="nav-link" href="./src/pages/delicias.html">Restaurantes</a>
+              <a class="nav-link" href="./src/pages/hotel.html">Hotel</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="./src/pages/spa.html">Spa</a></li>
             <li class="nav-item">
-              <a class="nav-link" href="./src/pages/actividades.html">Actividades</a>
+              <a class="nav-link" href="./src/pages/delicias.html"
+                >Restaurantes</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./src/pages/spa.html">Spa</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./src/pages/actividades.html"
+                >Actividades</a
+              >
             </li>
           </ul>
         </div>
-        <button class="btn btn-secondary order-3 ms-3" type="button" onclick="window.location.href='./src/pages/reservas.html';">
+        <button
+          class="btn btn-secondary order-3 ms-3"
+          type="button"
+          onclick="window.location.href='./src/pages/reservas.html';"
+        >
           Reservar
         </button>
       </div>
@@ -71,13 +89,21 @@
         </div>
         <div class="offcanvas-body d-md-none">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="./src/pages/hotel.html">Hotel</a></li>
             <li class="nav-item">
-              <a class="nav-link" href="./src/pages/delicias.html">Restaurantes</a>
+              <a class="nav-link" href="./src/pages/hotel.html">Hotel</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="./src/pages/spa.html">Spa</a></li>
             <li class="nav-item">
-              <a class="nav-link" href="./src/pages/actividades.html">Actividades</a>
+              <a class="nav-link" href="./src/pages/delicias.html"
+                >Restaurantes</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./src/pages/spa.html">Spa</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./src/pages/actividades.html"
+                >Actividades</a
+              >
             </li>
           </ul>
         </div>
@@ -85,10 +111,309 @@
     </nav>
     <!-- end Navbar -->
 
+    <!-- BannerVideo -->
+    <section class="video-container">
+      <video autoplay loop muted>
+        <source src="/src/videos/header_home_video.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+      <h1 class="banner-text">UN OASIS LLENO DEL ESPÍRITU DE LOS INCAS</h1>
+    </section>
+    <!-- end BannerVideo -->
+
+    <!-- Resort -->
+    <section class="container my-5 resort-section">
+      <div class="row">
+        <div class="col-md-6 order-2 order-md-1">
+          <img
+            src="./src/img/webp/Home/hotel.jpg"
+            alt="Piedra Luna Resort"
+            class="img-fluid resort-image d-block mx-auto"
+          />
+        </div>
+        <div class="text-intro-hotel col-md-6 mb-5 order-1 order-md-2">
+          <h2>Piedra Luna Resort</h2>
+          <p>
+            En nuestro paraíso verde, podrá relajarse y maravillarse a medida
+            que los
+            <strong>exuberantes jardines</strong> del
+            <strong>Piedra Luna Resort</strong> se armonizan con los renovadores
+            <em>rituales andinos</em>. Nos abastecemos de
+            <strong>productos locales</strong> de la región para preparar
+            nuestras delicias, ricas en <strong>alimentos saludables</strong> y
+            sabores tradicionales, que podrá disfrutar bajo el
+            <strong>cielo estrellado más hermoso</strong> de la zona.
+          </p>
+          <p>
+            La <strong>autenticidad</strong> es la clave en
+            <strong>Piedra Luna Resort</strong>, donde podrá participar en
+            actividades tradicionales, desde la preparación de una deliciosa
+            <em>“pachamanca”</em> al calor del fuego hasta ceremoniales de
+            <em>bendición a la madre tierra</em>. Baje el ritmo, respire
+            profundo y sienta cómo el
+            <strong>espíritu de los Andes</strong> cobra vida con toda su
+            fuerza.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- end Resort -->
+
+    <!--  Delicias -->
+    <section class="delicias-section mb-5">
+      <div class="container delicias-content">
+        <div class="row align-items-center">
+          <div class="delicias-text col-md-6 text-center mx-auto mb-md-0">
+            <h2>Delicias de la Luna</h2>
+            <p>
+              En Delicias de la Luna, le invitamos a explorar un mundo de
+              sabores que rinde homenaje a la tradición culinaria peruana y a
+              los superalimentos incas. Nuestro menú ofrece una fusión única de
+              granos andinos y productos locales, cuidadosamente seleccionados
+              para ofrecerle una experiencia auténtica y deliciosa.
+            </p>
+            <p>
+              Déjese llevar por un festín de sabores que despiertan los sentidos
+              y le transportan a las raíces de la cocina peruana. En cada
+              bocado, encontrará la pasión y el compromiso de ofrecer una
+              experiencia gastronómica memorable, donde lo tradicional se
+              encuentra con lo innovador.
+            </p>
+            <a href="/src/pages/delicias.html" class="btn btn-outline-dark"
+              >Más Información</a
+            >
+          </div>
+
+          <div class="col-md-6 mt-5">
+            <div class="delicias-images text-center">
+              <img
+                src="/src/img/webp/Home/platos-delicias.png"
+                alt="Delicias de la Luna"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end Delicias -->
+
+    <!--Hotel -->
+    <section class="my-5">
+      <div class="espacioxd m-5" style="color: #fff">.</div>
+      <div class="row m-5">
+        <div
+          class="col-12 col-md-4 d-flex align-items-center justify-content-center mb-4 mb-md-0"
+        >
+          <img
+            src="/src/img/webp/Home/img.hotel.jpg"
+            alt="Hotel 1"
+            class="img-fluid"
+          />
+        </div>
+        <div
+          class="col-12 col-md-4 d-flex align-items-center justify-content-center text-center mb-4 mb-md-0"
+        >
+          <div>
+            <h2>Lujosas villas en Piedra Luna Resort</h2>
+            <p>
+              Adornadas con encantadores jardines de flores silvestres, nuestras
+              lujosas villas de dos pisos son el lugar ideal para admirar la
+              belleza del entorno natural.
+            </p>
+            <p>
+              Con terrazas privadas, auténticas obras andinas en piedra y
+              espaciosos interiores, son perfectas para el descanso en absoluta
+              intimidad al final de un día de exploración.
+            </p>
+            <a href="/src/pages/hotel.html" class="btn btn-hotel"
+              >MÁS INFORMACIÓN</a
+            >
+          </div>
+        </div>
+        <div
+          class="col-12 col-md-4 d-flex align-items-center justify-content-center mb-4 mb-md-0"
+        >
+          <img
+            src="/src/img/webp/Home/img.act.jpg"
+            alt="Hotel 2"
+            class="img-fluid"
+          />
+        </div>
+      </div>
+    </section>
+    <!-- end Hotel -->
+
+     <!--Articulo -->
+    <div class="espacioxd m-5" style="color: #fff">.</div>
+    <section class="container-fluid background-act">
+      <hr />
+      <div class="row text-center ms-4 me-4">
+        <div class="col-12 col-md-4 mt-4 mb-4">
+          <div class="d-flex align-items-center">
+            <div class="img-art ms-1 me-3">
+              <img
+                src="./src/img/webp/Home/img.spa.jpg"
+                alt="Placer Inca"
+                class="img-fluid"
+              />
+            </div>
+            <div class="text-art text-start">
+              <h3>PLACER INCA</h3>
+              <a href="#">VER SPA</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 mt-4 mb-4">
+          <div class="d-flex align-items-center">
+            <div class="img-art ms-1 me-3">
+              <img
+                src="./src/img/webp/Home/img.actividades.jpg"
+                alt="Secretos del Valle"
+                class="img-fluid"
+              />
+            </div>
+            <div class="text-art text-start">
+              <h3>SECRETOS DEL VALLE</h3>
+              <a href="#">VER ACTIVIDADES</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 mt-4 mb-4">
+          <div class="d-flex align-items-center">
+            <div class="img-art ms-1 me-3">
+              <img
+                src="./src/img/webp/Home/img.bar.jpg"
+                alt="Piedra Luna Bar"
+                class="img-fluid"
+              />
+            </div>
+            <div class="text-art text-start">
+              <h3>PIEDRA LUNA BAR</h3>
+              <a href="#">VER COCTELERÍA</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr />
+    </section>
+    <!--Fin Articulo -->
+
+ <!-- Actividades -->
+ <section class="container-actividades-home container my-5">
+  <h2 class="text-center my-4">Actividades</h2>
+  <div class="row">
+    <article class="col-md-6 mb-4">
+      <figure class="card bg-dark text-white">
+        <img
+          src="/src/img/webp/Home/bg-spa.jpg"
+          class="card-img"
+          alt="Nature"
+        />
+        <figcaption class="card-img-overlay d-flex flex-column justify-content-center">
+          <p class="card-text">"Relájate en nuestras terrazas</p>
+          <p class="card-text">Con vistas impresionantes"</p>
+          <a href="#" class="btn">VER MÁS</a>
+        </figcaption>
+      </figure>
+    </article>
+    <article class="col-md-6 mb-4">
+      <figure class="card bg-dark text-white">
+        <img
+          src="/src/img/webp/Home/bg-rafting.jpg"
+          class="card-img"
+          alt="Adventure"
+        />
+        <figcaption class="card-img-overlay d-flex flex-column justify-content-center">
+          <p class="card-text">"Disfruta de emocionantes aventuras</p>
+          <p class="card-text">Rafting en el río"</p>
+          <a href="#" class="btn">VER MÁS</a>
+        </figcaption>
+      </figure>
+    </article>
+  </div>
+</section>
+<!-- end Actividades -->
+
+<!-- Footer -->
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-10">
+      <hr />
+      <footer class="pt-4 my-md-5 pt-md-5">
+        <div class="footer-container">
+          <div class="row text-start text-md-start">
+            <div class="col-12 col-md-6 mb-3 mb-md-0">
+              <h5>PIEDRA LUNA RESORT</h5>
+              <p class="fw-bold mb-1">LLÁMANOS AL</p>
+              <p class="mb-3">(01) 348-0687</p>
+              <p class="fw-bold mb-1">Km. 75.8, Carretera Urubamba-Ollantaytambo</p>
+              <p>Valle Sagrado, Cusco, Perú</p>
+              <div
+                class="footer-icons d-flex justify-content-start justify-content-md-start"
+              >
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
+                  style="width: 40px; height: 40px"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
+                  style="width: 40px; height: 40px"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
+                  style="width: 40px; height: 40px"
+                  ><i class="fab fa-spotify"></i
+                ></a>
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
+                  style="width: 40px; height: 40px"
+                  ><i class="fab fa-tiktok"></i
+                ></a>
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center rounded-circle border border-dark no-decoration"
+                  style="width: 40px; height: 40px"
+                  ><i class="fab fa-whatsapp"></i
+                ></a>
+              </div>
+            </div>
+            <div class="footer-newsletter col-12 col-md-6">
+              <h5>SUSCRÍBASE A LAS NEWSLETTER</h5>
+              <div class="input-group">
+                <input
+                  type="email"
+                  class="form-control"
+                  placeholder="introduce tu e-mail"
+                />
+                <button class="btn btn-outline-secondary" type="button" onclick="location.href='https://youtu.be/dQw4w9WgXcQ?si=tCQp0Cb7ofq7wIgZ';">
+                  <i class="fas fa-arrow-right"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <hr />
+      <div class="footer-copy text-start">
+        <p>&copy; PIEDRA LUNA RESORT 2024</p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end Footer -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+   
   </body>
 </html>
