updates to actividades

--- a/src/pages/actividades.html
+++ b/src/pages/actividades.html
@@ -86,7 +86,7 @@
             </ul>
           </div>
         </div>
-      </nav>
+    </nav>
       <!-- end Navbar -->
 
     <main class="container-fluid mt-md-3 p-0">
@@ -131,18 +131,20 @@
             <img src="/src/img/webp/Actividades/picnic.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img m-0 p-0"
                 alt="picnic-jardin">
             <section class="content-r col-12 col-md-6 order-sm-2 order-md-1">
-                <h3>
+                <div class="justify-content-center col-md-9 p-5">
+                    <h3>
                     Picnic en el jardín
-                </h3>
-                <p class="info">
-                    Disfrute de un almuerzo especial junto al Río Urubamba. Comience con unos sabrosos bocadillos, luego
-                    continúe con una variedad de platos con ingredientes locales, incluyendo de nuestro propio huerto.
-                    Previa reserva con 24 horas de anticipación. Para grupos de mínimo 2 y máximo 14 personas.
-                </p>
-                <div class="text-center">
-                    <a href="#"
-                        class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">PÓNGASE
-                        EN CONTACTO CON NOSOTROS</a>
+                    </h3>
+                    <p class="info">
+                        Disfrute de un almuerzo especial junto al Río Urubamba. Comience con unos sabrosos bocadillos, luego
+                        continúe con una variedad de platos con ingredientes locales, incluyendo de nuestro propio huerto.
+                        Previa reserva con 24 horas de anticipación. Para grupos de mínimo 2 y máximo 14 personas.
+                    </p>
+                    <div class="text-center">
+                        <a href="#"
+                            class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">PÓNGASE
+                            EN CONTACTO CON NOSOTROS</a>
+                    </div>
                 </div>
             </section>
         </section>
@@ -260,7 +262,7 @@
   }
 
 .container-fluid {
-margin-right: 50px;
+    margin-right: 50px;
 }
 
 @media (min-width: 768px) { /* md and up */
