--- a/src/pages/hotel.html
+++ b/src/pages/hotel.html
@@ -25,195 +25,236 @@
   </head>
 
   <body class="container-fluid m-0 p-0">
-   <!-- Navbar -->
-   <nav
-   class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light"
- >
-   <div class="container-fluid">
-     <a class="navbar-brand order-2 order-md-1" href="/index.html">
-       <img
-         src="/src/img/webp/Home/LOGO.jpg"
-         alt="Logo"
-         width="120"
-         height="auto"
-       />
-     </a>
-     <button
-       class="navbar-toggler order-1 order-md-0"
-       type="button"
-       data-bs-toggle="offcanvas"
-       data-bs-target="#offcanvasNavbar"
-       aria-controls="offcanvasNavbar"
-     >
-       <span class="navbar-toggler-icon"></span>
-     </button>
-     <div
-       class="collapse navbar-collapse order-md-2 justify-content-end ms-3"
-     >
-       <ul class="navbar-nav mb-2 mb-lg-0">
-         <li class="nav-item">
-           <a class="nav-link" href="./hotel.html">Hotel</a>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="./delicias.html">Restaurantes</a>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="./spa.html">Spa</a>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="./actividades.html">Actividades</a>
-         </li>
-       </ul>
-     </div>
-     <button
-       class="btn btn-secondary order-3 ms-3"
-       type="button"
-       onclick="window.location.href='./reservas.html';"
-     >
-       Reservar
-     </button>
-   </div>
-   <div
-     class="offcanvas offcanvas-start"
-     tabindex="-1"
-     id="offcanvasNavbar"
-     aria-labelledby="offcanvasNavbarLabel"
-   >
-     <div class="offcanvas-header">
-       <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú</h5>
-       <button
-         type="button"
-         class="btn-close"
-         data-bs-dismiss="offcanvas"
-         aria-label="Close"
-       ></button>
-     </div>
-     <div class="offcanvas-body d-md-none">
-       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-         <li class="nav-item">
-           <a class="nav-link" href="./hotel.html">Hotel</a>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="./delicias.html">Restaurantes</a>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="./spa.html">Spa</a>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="./actividades.html">Actividades</a>
-         </li>
-       </ul>
-     </div>
-   </div>
- </nav>
- <!-- end Navbar -->
-
-    <!-- Banner  -->
-    <div class="banner">
-      <img src="/src/img/webp/Hotel/banner.jpg" alt="Hotel" />
-      <div class="banner-text">
-        <h1>Hotel</h1>
-      </div>
-    </div>
-    <!-- Fin Banner  -->
-
-    <!-- Intro  -->
-    <section class="content container p-5">
-      <div class="img-intro d-flex justify-content-center">
-        <!-- Imagen para vistas md y superiores -->
-        <img
-          src="/src/img/webp/Hotel/img-intro-md.png"
-          class="img-fluid d-none d-md-block"
-          alt="Imagen para escritorio"
-          style="user-select: none"
-        />
-
-        <!-- Imagen para vistas inferiores a md -->
-        <img
-          src="/src/img/webp/Hotel/img-intro-sm.png"
-          class="img-fluid d-md-none"
-          alt="Imagen para móvil"
-          style="user-select: none"
-        />
-      </div>
-
-      <div class="text-intro">
-        <p>
-          <strong
-            >Sumérjase en un mundo de tierra, cielo y energía mística</strong
+    <!-- Navbar -->
+    <header>
+      <nav
+        class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light"
+      >
+        <div class="container-fluid">
+          <a class="navbar-brand order-2 order-md-1" href="/index.html">
+            <img
+              src="/src/img/webp/Home/LOGO.jpg"
+              alt="Logo"
+              width="120"
+              height="auto"
+            />
+          </a>
+          <button
+            class="navbar-toggler order-1 order-md-0"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasNavbar"
+            aria-controls="offcanvasNavbar"
           >
-          en nuestras exclusivas habitaciones, suites y villas sensoriales, cada
-          una diseñada meticulosamente para
-          <em>fomentar un profundo sentido de bienestar y serenidad</em>. La
-          <em>elegante decoración de madera</em>, seleccionada cuidadosamente
-          para reflejar la belleza natural del entorno, se complementa con
-          <strong>muebles de elaboración local</strong> que han sido artesanados
-          por manos expertas utilizando
-          <em>tejidos en colores suaves y luminosos</em>, creando una atmósfera
-          que lo invita a relajarse y revitalizarse.
-          <strong>Las ventanas del piso al techo</strong> ofrecen vistas
-          panorámicas impresionantes, conectándolo de manera íntima con la
-          <em>naturaleza circundante</em> y más allá, permitiéndole sentir la
-          brisa fresca del exterior sin siquiera salir de su refugio personal. A
-          medida que los <em>cielos de color cobalto</em> lentamente se tornan
-          de un <strong>índigo profundo</strong>, lo invitamos a salir a
-          nuestras <em>amplias terrazas de adoquines</em>, rodeadas de
-          vegetación exuberante y flores fragantes, donde podrá disfrutar de una
-          <strong>copa tranquila</strong>, mientras escucha los suaves sonidos
-          de la naturaleza que lo rodea, creando un momento de pura paz y
-          reflexión.
-        </p>
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse order-md-2 justify-content-end ms-3"
+          >
+            <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="./hotel.html">Hotel</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./delicias.html">Restaurantes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./spa.html">Spa</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./actividades.html">Actividades</a>
+              </li>
+            </ul>
+          </div>
+          <button
+            class="btn btn-secondary order-3 ms-3"
+            type="button"
+            onclick="window.location.href='./reservas.html';"
+          >
+            Reservar
+          </button>
+        </div>
+        <div
+          class="offcanvas offcanvas-start"
+          tabindex="-1"
+          id="offcanvasNavbar"
+          aria-labelledby="offcanvasNavbarLabel"
+        >
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="offcanvas-body d-md-none">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="./hotel.html">Hotel</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./delicias.html">Restaurantes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./spa.html">Spa</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./actividades.html">Actividades</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- end Navbar -->
+      <!-- Banner  -->
+      <div class="banner">
+        <img src="/src/img/webp/Hotel/banner.jpg" alt="Hotel" />
+        <div class="banner-text">
+          <h1>Hotel</h1>
+        </div>
       </div>
-    </section>
-    <!-- Fin Intro  -->
-
-    <section class="container mt-5 mb-5 position-relative">
-      <h2 class="text-center">Habitaciones, Suites y Villas</h2>
-
-      <div class="row mt-4 position-relative">
-        <div class="position-relative">
+    </header>
+    <!-- Fin Banner  -->
+    <main>
+      <!-- Intro  -->
+      <section class="content container p-5">
+        <div class="img-intro d-flex justify-content-center">
+          <!-- Imagen para vistas md y superiores -->
           <img
-            src="/src/img/webp/Hotel/terraza-md.png"
-            alt="Habitaciones Deluxe con Terraza"
-            class="img-fluid w-100"
+            src="/src/img/webp/Hotel/img-intro-md.png"
+            class="img-fluid d-none d-md-block"
+            alt="Imagen para escritorio"
+            style="user-select: none"
+          />
+
+          <!-- Imagen para vistas inferiores a md -->
+          <img
+            src="/src/img/webp/Hotel/img-intro-sm.png"
+            class="img-fluid d-md-none"
+            alt="Imagen para móvil"
+            style="user-select: none"
           />
         </div>
 
-
-        
-        <div
-          class="card-hotel-text col-12 text-center mt-3 position-relative bg-white"
-          style="z-index: 1"
-        >
-          <hr />
-          <h3 class="font-weight-bold">HABITACIONES DELUXE CON TERRAZA</h3>
-          <p class="text-muted">
-            Una cama king-size o dos camas individuales • Baño de mármol, gran
-            terraza privada • Tamaño: a partir de 452ft2 (42m2)
+        <div class="text-intro">
+          <p>
+            <strong
+              >Sumérjase en un mundo de tierra, cielo y energía mística</strong
+            >
+            en nuestras exclusivas habitaciones, suites y villas sensoriales,
+            cada una diseñada meticulosamente para
+            <em>fomentar un profundo sentido de bienestar y serenidad</em>. La
+            <em>elegante decoración de madera</em>, seleccionada cuidadosamente
+            para reflejar la belleza natural del entorno, se complementa con
+            <strong>muebles de elaboración local</strong> que han sido
+            artesanados por manos expertas utilizando
+            <em>tejidos en colores suaves y luminosos</em>, creando una
+            atmósfera que lo invita a relajarse y revitalizarse.
+            <strong>Las ventanas del piso al techo</strong> ofrecen vistas
+            panorámicas impresionantes, conectándolo de manera íntima con la
+            <em>naturaleza circundante</em> y más allá, permitiéndole sentir la
+            brisa fresca del exterior sin siquiera salir de su refugio personal.
+            A medida que los <em>cielos de color cobalto</em> lentamente se
+            tornan de un <strong>índigo profundo</strong>, lo invitamos a salir
+            a nuestras <em>amplias terrazas de adoquines</em>, rodeadas de
+            vegetación exuberante y flores fragantes, donde podrá disfrutar de
+            una <strong>copa tranquila</strong>, mientras escucha los suaves
+            sonidos de la naturaleza que lo rodea, creando un momento de pura
+            paz y reflexión.
           </p>
-          <button class="btn btn-outline-secondary">
-            INFORMACIÓN DETALLADA
-          </button>
+        </div>
+      </section>
+      <!-- Fin Intro  -->
+
+ <!-- Section Cards -->
+ <div class="section-cards container ps-3 pe-3">
+  <div class="img-card-hotel position-relative">
+    <!-- Imagen para pantallas menores a md -->
+    <img
+      src="/src/img/webp/Hotel/terraza-sm.png"
+      alt="Habitaciones Deluxe con Terraza"
+      class="img-fluid w-100 d-md-none"
+    />
+    <!-- Imagen para pantallas mayores a md -->
+    <img
+      src="/src/img/webp/Hotel/terraza-md.png"
+      alt="Habitaciones Deluxe con Terraza"
+      class="img-fluid w-100 d-none d-md-block"
+    />
+    <div
+      class="card-hotel-text position-relative bg-white"
+      style="z-index: 1"
+    >
+      <hr />
+      <h3>HABITACIONES DELUXE CON TERRAZA</h3>
+      <p class="text-muted">
+        Una cama king-size o dos camas individuales • Baño de mármol, gran
+        terraza privada • Tamaño: a partir de 452ft2 (42m2)
+      </p>
+      <button class="btn btn-outline-secondary">
+        INFORMACIÓN DETALLADA
+      </button>
+    </div>
+  </div>
+</div>
+
+      <div class="container mt-3 mb-5 position-relative align-items-center">
+        <div class="row">
+          <div class="col-md-6 ps-md-5 pe-md-5 col-12 mb-4">
+            <div class="img-card-hotel position-relative">
+              <img
+                src="/src/img/webp/Hotel/garden-md.png"
+                alt="Suite Junior Garden"
+                class="img-fluid w-100"
+              />
+              <div
+                class="card-hotel-text-2 position-relative bg-white"
+                style="z-index: 1"
+              >
+                <hr />
+                <h3>SUITES JUNIOR GARDEN</h3>
+                <p class="text-muted">
+                  Una cama tamaño king o dos camas tamaño queen • Cuarto de baño
+                  de mármol, terraza grande privada con jardín • Tamaño: desde
+                  92m2 (990ft2)
+                </p>
+                <button class="btn btn-outline-secondary">
+                  INFORMACIÓN DETALLADA
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 ps-md-5 pe-md-5 col-12">
+            <div class="img-card-hotel position-relative">
+              <img
+                src="/src/img/webp/Hotel/villas-md.png"
+                alt="Villas"
+                class="img-fluid w-100"
+              />
+              <div
+                class="card-hotel-text-2 position-relative bg-white"
+                style="z-index: 1"
+              >
+                <hr />
+                <h3>VILLAS</h3>
+                <p class="text-muted">
+                  Tres grandes dormitorios y cuartos de baño • Cocina totalmente
+                  equipada, comedor y chimenea • Tamaño: desde 220m2 (2368ft2)
+                </p>
+                <button class="btn btn-outline-secondary">
+                  INFORMACIÓN DETALLADA
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </section>
+    </main>
+  <!-- Fin Section Cards -->
 
-    <style>
-      .card-hotel-text hr {
-        width: 100%;
-        flex-direction: row;
-        justify-content: center;
-      }
-      .card-hotel-text {
-        padding-right: 10%;
-        padding-left: 10%;
-        border: 2px solid black;
-        width: 90%;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-      }
-    </style>
+
 
     <!-- Footer -->
     <div class="footermar container">
@@ -301,15 +342,14 @@
     </div>
     <!-- end Footer  -->
 
-        <!-- Bootstrap JS, Popper.js, and jQuery -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-        <script
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-          crossorigin="anonymous"
-        ></script>
-        <!-- Fin Bootstrap JS, Popper.js, and jQuery -->
+    <!-- Bootstrap JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Fin Bootstrap JS, Popper.js, and jQuery -->
   </body>
-  
 </html>
