se añadio boton scroll top

--- a/src/pages/actividades.html
+++ b/src/pages/actividades.html
@@ -373,5 +373,25 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+ <!-- Fin Bootstrap JS, Popper.js, and jQuery -->
+       <!--js Button -->
+       <script>
+        window.onscroll = function () {
+          var scrollBtn = document.getElementById("scrollToTopBtn");
+          if (
+            document.body.scrollTop > 1000 ||
+            document.documentElement.scrollTop > 1000
+          ) {
+            scrollBtn.style.display = "block";
+          } else {
+            scrollBtn.style.display = "none";
+          }
+        };
+  
+        document.getElementById("scrollToTopBtn").onclick = function () {
+          window.scrollTo({ top: 0, behavior: "smooth" });
+        };
+      </script>
+      <!-- Fin js Button -->
   </body>
 </html>
