--- a/src/pages/hotel.html
+++ b/src/pages/hotel.html
@@ -168,93 +168,94 @@
       </section>
       <!-- Fin Intro  -->
 
- <!-- Section Cards -->
- <div class="section-cards container ps-3 pe-3">
-  <div class="img-card-hotel position-relative">
-    <!-- Imagen para pantallas menores a md -->
-    <img
-      src="/src/img/webp/Hotel/terraza-sm.png"
-      alt="Habitaciones Deluxe con Terraza"
-      class="img-fluid w-100 d-md-none"
-    />
-    <!-- Imagen para pantallas mayores a md -->
-    <img
-      src="/src/img/webp/Hotel/terraza-md.png"
-      alt="Habitaciones Deluxe con Terraza"
-      class="img-fluid w-100 d-none d-md-block"
-    />
-    <div
-      class="card-hotel-text position-relative bg-white"
-      style="z-index: 1"
-    >
-      <hr />
-      <h3>HABITACIONES DELUXE CON TERRAZA</h3>
-      <p class="text-muted">
-        Una cama king-size o dos camas individuales • Baño de mármol, gran
-        terraza privada • Tamaño: a partir de 452ft2 (42m2)
-      </p>
-      <button class="btn btn-outline-secondary">
-        INFORMACIÓN DETALLADA
-      </button>
-    </div>
-  </div>
-</div>
-
-      <div class="container mt-3 mb-5 position-relative align-items-center">
-        <div class="row">
-          <div class="col-md-6 ps-md-5 pe-md-5 col-12 mb-4">
-            <div class="img-card-hotel position-relative">
-              <img
-                src="/src/img/webp/Hotel/garden-md.png"
-                alt="Suite Junior Garden"
-                class="img-fluid w-100"
-              />
-              <div
-                class="card-hotel-text-2 position-relative bg-white"
-                style="z-index: 1"
-              >
-                <hr />
-                <h3>SUITES JUNIOR GARDEN</h3>
-                <p class="text-muted">
-                  Una cama tamaño king o dos camas tamaño queen • Cuarto de baño
-                  de mármol, terraza grande privada con jardín • Tamaño: desde
-                  92m2 (990ft2)
-                </p>
-                <button class="btn btn-outline-secondary">
-                  INFORMACIÓN DETALLADA
-                </button>
-              </div>
+      <!-- Section Cards -->
+      <section>
+        <div class="section-cards container ps-3 pe-3">
+          <div class="img-card-hotel position-relative">
+            <!-- Imagen para pantallas menores a md -->
+            <img
+              src="/src/img/webp/Hotel/terraza-sm.png"
+              alt="Habitaciones Deluxe con Terraza"
+              class="img-fluid w-100 d-md-none"
+            />
+            <!-- Imagen para pantallas mayores a md -->
+            <img
+              src="/src/img/webp/Hotel/terraza-md.png"
+              alt="Habitaciones Deluxe con Terraza"
+              class="img-fluid w-100 d-none d-md-block"
+            />
+            <div
+              class="card-hotel-text position-relative bg-white"
+              style="z-index: 1"
+            >
+              <hr />
+              <h3>HABITACIONES DELUXE CON TERRAZA</h3>
+              <p class="text-muted">
+                Una cama king-size o dos camas individuales • Baño de mármol,
+                gran terraza privada • Tamaño: a partir de 452ft2 (42m2)
+              </p>
+              <button class="btn btn-outline-secondary">
+                INFORMACIÓN DETALLADA
+              </button>
             </div>
           </div>
-          <div class="col-md-6 ps-md-5 pe-md-5 col-12">
-            <div class="img-card-hotel position-relative">
-              <img
-                src="/src/img/webp/Hotel/villas-md.png"
-                alt="Villas"
-                class="img-fluid w-100"
-              />
-              <div
-                class="card-hotel-text-2 position-relative bg-white"
-                style="z-index: 1"
-              >
-                <hr />
-                <h3>VILLAS</h3>
-                <p class="text-muted">
-                  Tres grandes dormitorios y cuartos de baño • Cocina totalmente
-                  equipada, comedor y chimenea • Tamaño: desde 220m2 (2368ft2)
-                </p>
-                <button class="btn btn-outline-secondary">
-                  INFORMACIÓN DETALLADA
-                </button>
+        </div>
+
+        <div class="container mt-3 mb-5 position-relative align-items-center">
+          <div class="row">
+            <div class="col-md-6 ps-md-5 pe-md-5 mt-md-5 col-12 mb-4">
+              <div class="img-card-hotel position-relative">
+                <img
+                  src="/src/img/webp/Hotel/garden-md.png"
+                  alt="Suite Junior Garden"
+                  class="img-fluid w-100"
+                />
+                <div
+                  class="card-hotel-text-2 position-relative bg-white"
+                  style="z-index: 1"
+                >
+                  <hr />
+                  <h3>SUITES JUNIOR GARDEN</h3>
+                  <p class="text-muted">
+                    Una cama tamaño king o dos camas tamaño queen • Cuarto de
+                    baño de mármol, terraza grande privada con jardín • Tamaño:
+                    desde 92m2 (990ft2)
+                  </p>
+                  <button class="btn btn-outline-secondary">
+                    INFORMACIÓN DETALLADA
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 ps-md-5 pe-md-5 mt-md-5 col-12">
+              <div class="img-card-hotel position-relative">
+                <img
+                  src="/src/img/webp/Hotel/villas-md.png"
+                  alt="Villas"
+                  class="img-fluid w-100"
+                />
+                <div
+                  class="card-hotel-text-2 position-relative bg-white"
+                  style="z-index: 1"
+                >
+                  <hr />
+                  <h3>VILLAS</h3>
+                  <p class="text-muted">
+                    Tres grandes dormitorios y cuartos de baño • Cocina
+                    totalmente equipada, comedor y chimenea • Tamaño: desde
+                    220m2 (2368ft2)
+                  </p>
+                  <button class="btn btn-outline-secondary">
+                    INFORMACIÓN DETALLADA
+                  </button>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </main>
-  <!-- Fin Section Cards -->
-
-
+    <!-- Fin Section Cards -->
 
     <!-- Footer -->
     <div class="footermar container">
@@ -342,6 +343,10 @@
     </div>
     <!-- end Footer  -->
 
+    <button type="button" class="btn btn-light" id="scrollToTopBtn">
+      &#9650;
+    </button>
+
     <!-- Bootstrap JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
@@ -351,5 +356,25 @@
       crossorigin="anonymous"
     ></script>
     <!-- Fin Bootstrap JS, Popper.js, and jQuery -->
+
+    <!--js Button -->
+    <script>
+      window.onscroll = function () {
+        var scrollBtn = document.getElementById("scrollToTopBtn");
+        if (
+          document.body.scrollTop > 1000 ||
+          document.documentElement.scrollTop > 1000
+        ) {
+          scrollBtn.style.display = "block";
+        } else {
+          scrollBtn.style.display = "none";
+        }
+      };
+
+      document.getElementById("scrollToTopBtn").onclick = function () {
+        window.scrollTo({ top: 0, behavior: "smooth" });
+      };
+    </script>
+    <!-- Fin js Button -->
   </body>
 </html>
