--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous"
-  />
-  <link
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    rel="stylesheet"
-  />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Cabin:ital,wght@0,400..700;1,400..700&family=Inter:wght@100..900&display=swap"
-    rel="stylesheet"
-  />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Cabin:ital,wght@0,400..700;1,400..700&family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./src/css/index.css" />
     <title>Piedra Luna Resort</title>
     <link rel="icon" href="/src/img/icons/favicon.ico" type="image/x-icon" />
@@ -265,7 +265,7 @@
             </div>
             <div class="text-art text-start">
               <h3>PLACER INCA</h3>
-              <a href="#">VER SPA</a>
+              <a href="./src/pages/spa.html">VER SPA</a>
             </div>
           </div>
         </div>
@@ -280,7 +280,7 @@
             </div>
             <div class="text-art text-start">
               <h3>SECRETOS DEL VALLE</h3>
-              <a href="#">VER ACTIVIDADES</a>
+              <a href="./src/pages/actividades.html">VER ACTIVIDADES</a>
             </div>
           </div>
         </div>
@@ -295,7 +295,7 @@
             </div>
             <div class="text-art text-start">
               <h3>PIEDRA LUNA BAR</h3>
-              <a href="#">VER COCTELERÍA</a>
+              <a href="/src/pages/delicias_bar.html">VER COCTELERÍA</a>
             </div>
           </div>
         </div>
@@ -320,7 +320,7 @@
             >
               <p class="card-text">"Relájate en nuestras terrazas</p>
               <p class="card-text">Con vistas impresionantes"</p>
-              <a href="#" class="btn">VER MÁS</a>
+              <a href="./src/pages/actividades.html" class="btn">VER MÁS</a>
             </figcaption>
           </figure>
         </article>
@@ -336,7 +336,7 @@
             >
               <p class="card-text">"Disfruta de emocionantes aventuras</p>
               <p class="card-text">Rafting en el río"</p>
-              <a href="#" class="btn">VER MÁS</a>
+              <a href="./src/pages/actividades.html" class="btn">VER MÁS</a>
             </figcaption>
           </figure>
         </article>
@@ -345,7 +345,7 @@
     <!-- end Actividades -->
 
     <!-- Footer -->
-    <div class="container">
+    <div class="footermar container">
       <div class="row justify-content-center">
         <div class="col-12 col-md-10">
           <hr />
@@ -364,31 +364,38 @@
                     class="footer-icons d-flex justify-content-start justify-content-md-start"
                   >
                     <a
-                      href="#"
+                      href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                      target="_blank"
                       class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
                       style="width: 40px; height: 40px"
                       ><i class="fab fa-facebook-f"></i
                     ></a>
                     <a
-                      href="#"
+                      href="https://www.instagram.com/piedraluna_resort/"
+                      target="_blank"
                       class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
                       style="width: 40px; height: 40px"
                       ><i class="fab fa-instagram"></i
                     ></a>
                     <a
-                      href="#"
+                      href="https://open.spotify.com/playlist/1CLEPKaJssNgufFQp2aJDn?si=05f74ea2907f44d6"
+                      target="_blank"
                       class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
                       style="width: 40px; height: 40px"
-                      ><i class="fab fa-spotify"></i
-                    ></a>
+                    >
+                      <i class="fab fa-spotify"></i>
+                    </a>
+
                     <a
-                      href="#"
+                      href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                      target="_blank"
                       class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3 no-decoration"
                       style="width: 40px; height: 40px"
                       ><i class="fab fa-tiktok"></i
                     ></a>
                     <a
-                      href="#"
+                      href="https://w.app/PiedraLunaResort"
+                      target="_blank"
                       class="d-flex align-items-center justify-content-center rounded-circle border border-dark no-decoration"
                       style="width: 40px; height: 40px"
                       ><i class="fab fa-whatsapp"></i
@@ -422,9 +429,9 @@
         </div>
       </div>
     </div>
-    <!-- end Footer -->
+    <!-- end Footer  -->
 
-   <!-- Bootstrap JS, Popper.js, and jQuery -->
+    <!-- Bootstrap JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script
