--- a/src/pages/actividades.html
+++ b/src/pages/actividades.html
@@ -27,7 +27,7 @@
   <body class="container-fluid m-0 p-0">
     <!-- Navbar -->
     <nav
-      class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light"
+      class="navbar navbar-expand-md fixed-top col-md-9 mx-0 bg-white navbar-light"
     >
       <div class="container-fluid">
         <a class="navbar-brand order-2 order-md-1" href="/index.html">
@@ -120,7 +120,7 @@
     <!-- Intro  -->
     <section class="content container p-5">
       <div class="text-intro text-justify">
-        <h2>
+        <h2 class="text-center">
           <strong>Descubra los secretos del Valle Sagrado</strong>
         </h2>
         <p>
