fix images issues

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <link rel="stylesheet" href="./src/css/index.css" />
     <title>Piedra Luna Resort</title>
-    <link rel="icon" href="/src/img/icons/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./src/img/icons/favicon.ico" type="image/x-icon" />
   </head>
 
   <body>
@@ -32,7 +32,7 @@
       <div class="container-fluid">
         <a class="navbar-brand order-2 order-md-1" href="./index.html">
           <img
-            src="/src/img/webp/Home/LOGO.jpg"
+            src="./src/img/webp/Home/LOGO.jpg"
             alt="Logo"
             width="120"
             height="auto"
@@ -119,7 +119,7 @@
     <!-- BannerVideo -->
     <section class="video-container">
       <video autoplay loop muted>
-        <source src="/src/videos/header_home_video.mp4" type="video/mp4" />
+        <source src="./src/videos/header_home_video.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
       <h1 class="banner-text">UN OASIS LLENO DEL ESPÍRITU DE LOS INCAS</h1>
@@ -184,7 +184,7 @@
               experiencia gastronómica memorable, donde lo tradicional se
               encuentra con lo innovador.
             </p>
-            <a href="/src/pages/delicias.html" class="btn btn-outline-dark"
+            <a href="./src/pages/delicias.html" class="btn btn-outline-dark"
               >Más Información</a
             >
           </div>
@@ -192,7 +192,7 @@
           <div class="col-md-6 mt-5">
             <div class="delicias-images text-center">
               <img
-                src="/src/img/webp/Home/platos-delicias.png"
+                src="./src/img/webp/Home/platos-delicias.png"
                 alt="Delicias de la Luna"
                 class="img-fluid"
               />
@@ -211,7 +211,7 @@
           class="col-12 col-md-4 d-flex align-items-center justify-content-center mb-4 mb-md-0"
         >
           <img
-            src="/src/img/webp/Home/img.hotel.jpg"
+            src="./src/img/webp/Home/img.hotel.jpg"
             alt="Hotel 1"
             class="img-fluid"
           />
@@ -231,7 +231,7 @@
               espaciosos interiores, son perfectas para el descanso en absoluta
               intimidad al final de un día de exploración.
             </p>
-            <a href="/src/pages/hotel.html" class="btn btn-hotel"
+            <a href="./src/pages/hotel.html" class="btn btn-hotel"
               >MÁS INFORMACIÓN</a
             >
           </div>
@@ -240,7 +240,7 @@
           class="col-12 col-md-4 d-flex align-items-center justify-content-center mb-4 mb-md-0"
         >
           <img
-            src="/src/img/webp/Home/img.act.jpg"
+            src="./src/img/webp/Home/img.act.jpg"
             alt="Hotel 2"
             class="img-fluid"
           />
@@ -295,7 +295,7 @@
             </div>
             <div class="text-art text-start">
               <h3>PIEDRA LUNA BAR</h3>
-              <a href="/src/pages/delicias_bar.html">VER COCTELERÍA</a>
+              <a href="./src/pages/delicias_bar.html">VER COCTELERÍA</a>
             </div>
           </div>
         </div>
@@ -311,7 +311,7 @@
         <article class="col-md-6 mb-4">
           <figure class="card bg-dark text-white">
             <img
-              src="/src/img/webp/Home/bg-spa.jpg"
+              src="./src/img/webp/Home/bg-spa.jpg"
               class="card-img"
               alt="Nature"
             />
@@ -327,7 +327,7 @@
         <article class="col-md-6 mb-4">
           <figure class="card bg-dark text-white">
             <img
-              src="/src/img/webp/Home/bg-rafting.jpg"
+              src="./src/img/webp/Home/bg-rafting.jpg"
               class="card-img"
               alt="Adventure"
             />
