--- a/src/pages/delicias_bar.html
+++ b/src/pages/delicias_bar.html
@@ -32,7 +32,7 @@
       <div class="container-fluid">
         <a class="navbar-brand order-2 order-md-1" href="/index.html">
           <img
-            src="/src/img/webp/Home/LOGO.jpg"
+            src="./src/img/webp/Home/LOGO.jpg"
             alt="Logo"
             width="120"
             height="auto"
@@ -110,7 +110,7 @@
 
     <!-- Banner  -->
     <div class="banner">
-      <img src="/src/img/webp/Delicias_Bar/banner.jpg" alt="Delicias de la Luna" />
+      <img src="./src/img/webp/Delicias_Bar/banner.jpg" alt="Delicias de la Luna" />
       <div class="banner-text">
         <h1>Piedra Luna Bar</h1>
       </div>
