--- a/src/pages/hotel.html
+++ b/src/pages/hotel.html
@@ -123,7 +123,7 @@
         <div class="img-intro d-flex justify-content-center">
           <!-- Imagen para vistas md y superiores -->
           <img
-            src="/src/img/webp/Hotel/img-intro-md.png"
+            src="./src/img/webp/Hotel/img-intro-md.png"
             class="img-fluid d-none d-md-block"
             alt="Imagen para escritorio"
             style="user-select: none"
@@ -131,7 +131,7 @@
 
           <!-- Imagen para vistas inferiores a md -->
           <img
-            src="/src/img/webp/Hotel/img-intro-sm.png"
+            src="./src/img/webp/Hotel/img-intro-sm.png"
             class="img-fluid d-md-none"
             alt="Imagen para móvil"
             style="user-select: none"
@@ -174,13 +174,13 @@
           <div class="img-card-hotel position-relative">
             <!-- Imagen para pantallas menores a md -->
             <img
-              src="/src/img/webp/Hotel/terraza-sm.png"
+              src="./src/img/webp/Hotel/terraza-sm.png"
               alt="Habitaciones Deluxe con Terraza"
               class="img-fluid w-100 d-md-none"
             />
             <!-- Imagen para pantallas mayores a md -->
             <img
-              src="/src/img/webp/Hotel/terraza-md.png"
+              src="./src/img/webp/Hotel/terraza-md.png"
               alt="Habitaciones Deluxe con Terraza"
               class="img-fluid w-100 d-none d-md-block"
             />
@@ -206,7 +206,7 @@
             <div class="col-md-6 ps-md-5 pe-md-5 mt-md-5 col-12 mb-4">
               <div class="img-card-hotel position-relative">
                 <img
-                  src="/src/img/webp/Hotel/garden-md.png"
+                  src="./src/img/webp/Hotel/garden-md.png"
                   alt="Suite Junior Garden"
                   class="img-fluid w-100"
                 />
@@ -230,7 +230,7 @@
             <div class="col-md-6 ps-md-5 pe-md-5 mt-md-5 col-12">
               <div class="img-card-hotel position-relative">
                 <img
-                  src="/src/img/webp/Hotel/villas-md.png"
+                  src="./src/img/webp/Hotel/villas-md.png"
                   alt="Villas"
                   class="img-fluid w-100"
                 />
