--- a/src/pages/delicias.html
+++ b/src/pages/delicias.html
@@ -24,7 +24,7 @@
   <nav class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light">
     <div class="container-fluid">
       <a class="navbar-brand order-2 order-md-1" href="/index.html">
-        <img src="/src/img/webp/Home/LOGO.jpg" alt="Logo" width="120" height="auto" />
+        <img src="./src/img/webp/Home/LOGO.jpg" alt="Logo" width="120" height="auto" />
       </a>
       <button class="navbar-toggler order-1 order-md-0" type="button" data-bs-toggle="offcanvas"
         data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
