--- a/src/pages/hotel.html
+++ b/src/pages/hotel.html
@@ -31,9 +31,9 @@
         class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light"
       >
         <div class="container-fluid">
-          <a class="navbar-brand order-2 order-md-1" href="/index.html">
+          <a class="navbar-brand order-2 order-md-1" href="/lab_design_web">
             <img
-              src="/src/img/webp/Home/LOGO.jpg"
+              src="./src/img/webp/Home/LOGO.jpg"
               alt="Logo"
               width="120"
               height="auto"
@@ -110,7 +110,7 @@
       <!-- end Navbar -->
       <!-- Banner  -->
       <div class="banner">
-        <img src="/src/img/webp/Hotel/banner.jpg" alt="Hotel" />
+        <img src="./src/img/webp/Hotel/banner.jpg" alt="Hotel" />
         <div class="banner-text">
           <h1>Hotel</h1>
         </div>
